--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,14 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #f9fafc;
     margin: 20px;
+    height: 100vh;
 }
 h1 {
     font-size: 16px;
 }
 ul {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
     margin: 0;
     padding: 0px;
@@ -31,4 +34,75 @@ p {
     text-align: left;
     border-left: 2px solid #69696a;
     padding: 10px;
+}
+
+
+@media only screen and (min-width: 768px) {
+    
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    }
+ul {
+    display: flex;
+    flex-direction: row;
+}
+li {
+    padding: 5px;
+}
+nav .button {
+    display: inline;
+    padding: 5px 15px;
+}
+main {
+    position: relative;
+    transform: translateY(50%);
+}
+
+p {
+    max-width: 50%;
+}
+section .button {
+    /* display: inline; */
+    position: fixed;
+    left: 50%;
+    bottom:-225%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+
+}
+.dot1 {
+    height: 250px;
+    width: 250px;
+    background-color: rgba(247, 136, 167, 0.6);
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 72%;
+    top: -10%;
+
+}
+.dot2 {
+    height: 200px;
+    width: 200px;
+    background-color: rgba(247, 193, 162, 0.7) ;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    right: 0%;
+    top: 100%;
+
+}
+.dot3 {
+    height: 150px;
+    width: 150px;
+    background-color:rgba(207, 130, 213, 0.6);
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    right: 0%;
+    top: 30%;
+
+}
 }
